# actuator_interface

./: CMakeLists.txt  package.xml
actuators/actuator/: CMakeLists.txt  package.xml
actuators/actuator/include/actuator/: actuator.hpp
actuators/actuator/src/: actuator.cpp
actuators/motor_actuator/: CMakeLists.txt  package.xml
actuators/motor_actuator/config/: config.json  write_data.json
actuators/motor_actuator/include/motor_actuator/: motor_actuator.hpp
actuators/motor_actuator/src/: motor_actuator.cpp
actuators/motor_actuator/test/: main.cpp
canopen/: NMT.c  NMT.h  PDO.c  PDO.h  SDO.c  SDO.h
config/: robot_hardware_config.json
config_parser/include/config_parser/: config_parser.h
config_parser/src/: config_parser.cpp
gls_barcode/: CMakeLists.txt  package.xml
gls_barcode/include/: gls_barcode.hpp  gls_params.hpp  sockets.hpp
gls_barcode/src/: gls_barcode.cpp  sockets.cpp
gls_barcode/test/: main.cpp
include/: .motor.hpp.swo  .motor.hpp.swp  motor.hpp  motor_controls.hpp  motor_feedback.hpp  motor_interface.hpp  motor_params.hpp  sockets.hpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/actuator/share/actuator/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/actuator/share/actuator/cmake/: actuatorConfig-version.cmake  actuatorConfig.cmake  ament_cmake_export_targets-extras.cmake
install/actuator/share/actuator/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/actuator/share/ament_index/resource_index/package_run_dependencies/: actuator
install/actuator/share/ament_index/resource_index/parent_prefix_path/: actuator
install/encoder_sensor/include/encoder_sensor/: encoder_sensor.hpp
install/encoder_sensor/lib/encoder_sensor/: encoder_sensor_test
install/encoder_sensor/share/ament_index/resource_index/package_run_dependencies/: encoder_sensor
install/encoder_sensor/share/ament_index/resource_index/parent_prefix_path/: encoder_sensor
install/encoder_sensor/share/encoder_sensor/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/encoder_sensor/share/encoder_sensor/cmake/: ament_cmake_export_targets-extras.cmake  encoder_sensorConfig-version.cmake  encoder_sensorConfig.cmake  encoder_sensorExport-noconfig.cmake
install/encoder_sensor/share/encoder_sensor/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/motor/lib/: test_actuator_interface
install/motor/share/ament_index/resource_index/package_run_dependencies/: motor
install/motor/share/motor/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/motor/share/motor/cmake/: motorConfig-version.cmake  motorConfig.cmake
install/motor/share/motor/environment/: ament_prefix_path.dsv  path.dsv
install/motor_actuator/include/motor_actuator/: motor_actuator.hpp
install/motor_actuator/lib/motor_actuator/: motor_actuator_test
install/motor_actuator/share/motor_actuator/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/motor_actuator/share/motor_actuator/cmake/: ament_cmake_export_targets-extras.cmake  motor_actuatorConfig-version.cmake  motor_actuatorConfig.cmake  motor_actuatorExport.cmake
install/motor_actuator/share/motor_actuator/environment/: ament_prefix_path.dsv  library_path.dsv  library_path.sh  path.dsv
install/motor_test/lib/motor_test/: motor_test_test
install/motor_test/share/motor_test/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/motor_test/share/motor_test/cmake/: ament_cmake_export_targets-extras.cmake  motor_testConfig-version.cmake  motor_testConfig.cmake  motor_testExport.cmake
install/motor_test/share/motor_test/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/sensor/include/sensor/: sensor.hpp
install/sensor/share/sensor/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/sensor/share/sensor/cmake/: ament_cmake_export_targets-extras.cmake  sensorConfig-version.cmake  sensorConfig.cmake  sensorExport-noconfig.cmake  sensorExport.cmake
install/sensor/share/sensor/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
json_reader/include/json_reader/: json_read.h
json_reader/src/: json_read.cpp
log/: latest_build
motor/: CMakeLists.txt
motor/include/: encoder_sensor_data.hpp  motor.hpp  motor_controls.hpp  motor_feedback.hpp  motor_interface.hpp  motor_params.hpp  motor_sensor.hpp  socketcan_interface.hpp  sockets.hpp
motor/src/: motor.cpp  motor_controls.cpp  motor_feedback.cpp  motor_interface.cpp
motor_test/: CMakeLists.txt  package.xml
motor_test/include/motor_test/: motor_test.hpp
motor_test/src/: motor_test.cpp
motor_test/test/: main.cpp
sensors/barcode_sensor/: CMakeLists.txt  package.xml
sensors/barcode_sensor/config/: config.json  read_data.json
sensors/barcode_sensor/include/barcode_sensor/: barcode_sensor.hpp
sensors/barcode_sensor/src/: barcode_sensor.cpp
sensors/barcode_sensor/test/: main.cpp
sensors/encoder_sensor/: CMakeLists.txt  package.xml
sensors/encoder_sensor/config/: config.json  motor_data.json
sensors/encoder_sensor/include/encoder_sensor/: encoder_data.hpp  encoder_sensor.hpp
sensors/encoder_sensor/src/: encoder_sensor.cpp
sensors/encoder_sensor/test/: main.cpp
sensors/sensor/: CMakeLists.txt  package.xml
sensors/sensor/include/sensor/: sensor.hpp
sensors/sensor/src/: sensor.cpp
socketcan/: socketcan.c  socketcan.h
src/: motor.cpp  motor_controls.cpp  motor_feedback.cpp  motor_interface.cpp  sockets.cpp
test/: test_actuator_interface.cpp
(+7 files in other folders)
