<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>gls_barcode</name>
  <version>0.6.2</version>
  <description>Acutuator Interface</description>
  <maintainer email="amrapali.kh@rightbot.in">Amrapali Khandare</maintainer>
  <license>Apache License 2.0</license>
  <author>Amrapali Khandare</author>
  <author>Amrapali Khandare</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>

